force-app/main/default/objects/InvoicePos__c/InvoicePos__c.object-meta.xml
<CustomObject>
    <label>Invoice Pos</label>
    <nameField>
        <displayFormat>IP-{000000}</displayFormat>
        <label>Invoice Pos Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Pos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>