force-app/main/default/objects/InvoicePos__c/fields/AbacusInterfaceInclude__c.field-meta.xml
<CustomField>
    <fullName>AbacusInterfaceInclude__c</fullName>
    <formula>FinanceAccount__r.Name !=&quot;Group&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Interface Include</label>
    <type>Checkbox</type>
</CustomField>