force-app/main/default/objects/InvoicePos__c/fields/AbacusInvoicePositionAmount__c.field-meta.xml
<CustomField>
    <fullName>AbacusInvoicePositionAmount__c</fullName>
    <description>05.12.2016, ary: Dieses Feld wird nicht mehr benötigt, da wir keine Unterscheidung mehr machen in Bezug auf verrechneten Umsatz und Umsatz, der ins Abacus fliesst. Es muss geprüft werden, ob der Technische User dieses Feld noch benötigt.</description>
    <label>Abacus Invoice Position - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>