force-app/main/default/objects/InvoicePos__c/fields/CurrencyRateToGBP__c.field-meta.xml
<CustomField>
    <fullName>CurrencyRateToGBP__c</fullName>
    <label>Currency Rate to GBP</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>