force-app/main/default/objects/InvoicePos__c/fields/CurrencyRateToSGP__c.field-meta.xml
<CustomField>
    <fullName>CurrencyRateToSGP__c</fullName>
    <label>Currency Rate to SGP</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>