force-app/main/default/objects/InvoicePos__c/fields/ExpenseAllowanceService__c.field-meta.xml
<CustomField>
    <fullName>ExpenseAllowanceService__c</fullName>
    <formula>PackageName__r.ExpenseAllowancePackage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Allowance Service</label>
    <type>Checkbox</type>
</CustomField>