force-app/main/default/objects/InvoicePos__c/fields/FinanceAccount__c.field-meta.xml
<CustomField>
    <fullName>FinanceAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Account</label>
    <referenceTo>FinanceAccount__c</referenceTo>
    <relationshipLabel>Invoice Pos</relationshipLabel>
    <relationshipName>InvoicePos</relationshipName>
    <type>Lookup</type>
</CustomField>