force-app/main/default/objects/InvoicePos__c/fields/FinanceAccountNr__c.field-meta.xml
<CustomField>
    <fullName>FinanceAccountNr__c</fullName>
    <label>Finance Account Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>