force-app/main/default/objects/InvoicePos__c/fields/InvoiceAbacusInterfaceExport__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAbacusInterfaceExport__c</fullName>
    <formula>InvoiceName__r.AbacusInterfaceExport__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Abacus Interface Export</label>
    <type>Checkbox</type>
</CustomField>