force-app/main/default/objects/InvoicePos__c/fields/InvoiceAbacusTransfer__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAbacusTransfer__c</fullName>
    <formula>InvoiceName__r.AbacusTransfer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Abacus Transfer</label>
    <type>DateTime</type>
</CustomField>