force-app/main/default/objects/InvoicePos__c/fields/InvoicePositionAmount__c.field-meta.xml
<CustomField>
    <fullName>InvoicePositionAmount__c</fullName>
    <label>Invoice Position - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>