force-app/main/default/objects/InvoicePos__c/fields/InvoicePositionAmountCHF__c.field-meta.xml
<CustomField>
    <fullName>InvoicePositionAmountCHF__c</fullName>
    <formula>InvoicePositionAmount__c* CurrencyRateToCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Position - Amount (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>