force-app/main/default/objects/InvoicePos__c/fields/InvoicePositionAmountGBP__c.field-meta.xml
<CustomField>
    <fullName>InvoicePositionAmountGBP__c</fullName>
    <formula>InvoicePositionAmount__c *  CurrencyRateToGBP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Position - Amount (GBP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>