force-app/main/default/objects/InvoicePos__c/fields/InvoicePositionAmountGross__c.field-meta.xml
<CustomField>
    <fullName>InvoicePositionAmountGross__c</fullName>
    <formula>InvoicePositionAmount__c+ InvoicePositionVATAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Position - Amount (Gross)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>