force-app/main/default/objects/InvoicePos__c/fields/InvoicePositionAmountGrossCHF__c.field-meta.xml
<CustomField>
    <fullName>InvoicePositionAmountGrossCHF__c</fullName>
    <formula>InvoicePositionAmountCHF__c+ InvoicePositionVATAmountCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Position - Amount Gross (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>