force-app/main/default/objects/InvoicePos__c/fields/InvoicePositionAmountSGP__c.field-meta.xml
<CustomField>
    <fullName>InvoicePositionAmountSGP__c</fullName>
    <formula>InvoicePositionAmount__c* CurrencyRateToSGP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Position - Amount (SGP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>