force-app/main/default/objects/InvoicePos__c/fields/InvoicePositionDate__c.field-meta.xml
<CustomField>
    <fullName>InvoicePositionDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Invoice Position Date</label>
    <type>Date</type>
</CustomField>