force-app/main/default/objects/InvoicePos__c/fields/InvoicePositionName__c.field-meta.xml
<CustomField>
    <fullName>InvoicePositionName__c</fullName>
    <label>Invoice Position Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>