force-app/main/default/objects/InvoicePos__c/fields/InvoicePositionSortNr__c.field-meta.xml
<CustomField>
    <fullName>InvoicePositionSortNr__c</fullName>
    <label>Invoice Position Sort-Nr.</label>
    <length>4</length>
    <type>Text</type>
</CustomField>