force-app/main/default/objects/InvoicePos__c/fields/InvoicePositionSuperior__c.field-meta.xml
<CustomField>
    <fullName>InvoicePositionSuperior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Position (Superior)</label>
    <referenceTo>InvoicePos__c</referenceTo>
    <relationshipLabel>Invoice Pos</relationshipLabel>
    <relationshipName>Invoice_Pos</relationshipName>
    <type>Lookup</type>
</CustomField>