force-app/main/default/objects/InvoicePos__c/fields/InvoicePositionText__c.field-meta.xml
<CustomField>
    <fullName>InvoicePositionText__c</fullName>
    <label>Invoice Position Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>