force-app/main/default/objects/InvoicePos__c/fields/InvoicePositionVATAmount__c.field-meta.xml
<CustomField>
    <fullName>InvoicePositionVATAmount__c</fullName>
    <label>Invoice Position - VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>