force-app/main/default/objects/InvoicePos__c/fields/InvoicePositionVATAmountCHF__c.field-meta.xml
<CustomField>
    <fullName>InvoicePositionVATAmountCHF__c</fullName>
    <label>Invoice Position - VAT Amount (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>