force-app/main/default/objects/InvoicePos__c/fields/InvoicePositionVATAmountGBP__c.field-meta.xml
<CustomField>
    <fullName>InvoicePositionVATAmountGBP__c</fullName>
    <label>Invoice Position - VAT Amount (GBP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>