force-app/main/default/objects/InvoicePos__c/fields/InvoicePositionVATAmountSGP__c.field-meta.xml
<CustomField>
    <fullName>InvoicePositionVATAmountSGP__c</fullName>
    <label>Invoice Position - VAT Amount (SGP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>