force-app/main/default/objects/InvoicePos__c/fields/PackageName__c.field-meta.xml
<CustomField>
    <fullName>PackageName__c</fullName>
    <label>Package Name</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Invoice Pos</relationshipLabel>
    <relationshipName>InvoicePos</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>