force-app/main/default/objects/InvoicePos__c/fields/PackageSubType__c.field-meta.xml
<CustomField>
    <fullName>PackageSubType__c</fullName>
    <label>Package Sub-Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>