force-app/main/default/objects/InvoicePos__c/fields/PackageType__c.field-meta.xml
<CustomField>
    <fullName>PackageType__c</fullName>
    <label>Package Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>