force-app/main/default/objects/InvoicePos__c/fields/ProjectCurrency__c.field-meta.xml
<CustomField>
    <fullName>ProjectCurrency__c</fullName>
    <label>Project Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>