force-app/main/default/objects/InvoicePos__c/fields/ProjectManagementAllowanceService__c.field-meta.xml
<CustomField>
    <fullName>ProjectManagementAllowanceService__c</fullName>
    <formula>PackageName__r.ProjectManagementAllowancePackage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Management Allowance Service</label>
    <type>Checkbox</type>
</CustomField>