force-app/main/default/objects/InvoicePos__c/fields/ShowPosition__c.field-meta.xml
<CustomField>
    <fullName>ShowPosition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Position</label>
    <type>Checkbox</type>
</CustomField>