force-app/main/default/objects/InvoicePos__c/fields/ShowPositionAmount__c.field-meta.xml
<CustomField>
    <fullName>ShowPositionAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Position Amount</label>
    <type>Checkbox</type>
</CustomField>