force-app/main/default/objects/InvoicePos__c/fields/ValCheckValidInvoicePos__c.field-meta.xml
<CustomField>
    <fullName>ValCheckValidInvoicePos__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCheckValidInvoicePos</label>
    <type>Checkbox</type>
</CustomField>