force-app/main/default/objects/InvoicePos__c/fields/ValIsExpenseAllowanceService__c.field-meta.xml
<CustomField>
    <fullName>ValIsExpenseAllowanceService__c</fullName>
    <formula>PackageName__r.ExpenseAllowancePackage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValIsExpenseAllowanceService</label>
    <type>Checkbox</type>
</CustomField>