force-app/main/default/objects/InvoicePos__c/fields/ValIsProjectManagementAllowanceService__c.field-meta.xml
<CustomField>
    <fullName>ValIsProjectManagementAllowanceService__c</fullName>
    <formula>PackageName__r.ProjectManagementAllowancePackage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValIsProjectManagementAllowanceService</label>
    <type>Checkbox</type>
</CustomField>