force-app/main/default/objects/InvoicePos__c/validationRules/INP006_Billing_Template_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>INP006_Billing_Template_Match</fullName>
    <active>true</active>
    <description>The Billing Template Checkboxes must match</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,


OR(
  AND(
  ShowPositionAmount__c=true,
  ShowPosition__c=false
  ),

  AND(
  ShowInvoiceText__c=true,
  ShowPosition__c=false
  )
))</errorConditionFormula>
    <errorMessage>Checkboxes are not in line for billing template.
(INP006)</errorMessage>
</ValidationRule>