force-app/main/default/objects/InvoicePos__c/validationRules/INP007_Cost_Center_Finance_Account_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>INP007_Cost_Center_Finance_Account_Match</fullName>
    <active>true</active>
    <description>The Cost Center and the Finance Account must match.</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

 PackageName__r.RecordType.DeveloperName &lt;&gt;&quot;Group&quot;,
PackageName__r.ProjectName__r.ProjectCostCenter__r.Name &lt;&gt; FinanceAccount__r.CostCenter__r.Name
)</errorConditionFormula>
    <errorMessage>The Cost Center and the Finance Account do not match. Please get in touch with your Super User for assistance.
(INP007)</errorMessage>
</ValidationRule>