force-app/main/default/objects/InvoicePos__c/validationRules/INP008_INV_POS_not_move.validationRule-meta.xml
<ValidationRule>
    <fullName>INP008_INV_POS_not_move</fullName>
    <active>true</active>
    <description>The Invoice Postiion can not be attached to another invoice.</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
ISCHANGED( InvoiceName__c ))</errorConditionFormula>
    <errorMessage>You can not attach an invoice position to another invoice. Please get in touch with your Super User for assistance.
(INP008)</errorMessage>
</ValidationRule>