force-app/main/default/objects/InvoicePos__c/validationRules/INP010_Position_Change_Status_Sent.validationRule-meta.xml
<ValidationRule>
    <fullName>INP010_Position_Change_Status_Sent</fullName>
    <active>true</active>
    <description>The Invoice Position can not be changed anymore</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
$User.IsFinanceManager__c = false,
DATEVALUE(LastModifiedDate) &lt;= today(),
ISPICKVAL(InvoiceName__r.InvoiceStatus__c,&quot;Sent&quot;)
)</errorConditionFormula>
    <errorMessage>The Invoice Position can not be changed anymore since the Invoice is in status &quot;Sent&quot;. Please get in touch with Finance.
(INP010)</errorMessage>
</ValidationRule>