force-app/main/default/objects/InvoicePos__c/validationRules/INP11_Invoice_Position_Amount_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>INP11_Invoice_Position_Amount_Not_Null</fullName>
    <active>true</active>
    <description>Invoice Position can not be empty</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true ,
ISBLANK( InvoicePositionAmount__c )
)</errorConditionFormula>
    <errorDisplayField>InvoicePositionAmount__c</errorDisplayField>
    <errorMessage>The invoice position amount can not be empty. Please add a value or 0.
(INP11)</errorMessage>
</ValidationRule>