force-app/main/default/objects/InvoicePos__c/validationRules/INP12_Invoice_Position_Package_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>INP12_Invoice_Position_Package_Type</fullName>
    <active>true</active>
    <description>Invoice Position Package Type must match Package Record Type Name</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true ,
OR(
AND( 
PackageName__r.RecordType.DeveloperName =&quot;Time&quot;,
PackageType__c != &quot;Time&quot;
)
,
AND( 
PackageName__r.RecordType.DeveloperName =&quot;Expense&quot;,
PackageType__c != &quot;Expense&quot;
)
,
AND( 
PackageName__r.RecordType.DeveloperName =&quot;Time&quot;,
PackageType__c != &quot;Time&quot;
)
,
AND( 
PackageName__r.RecordType.DeveloperName =&quot;SupplierCosts&quot;,
PackageType__c != &quot;SupplierCosts&quot;
)
,
AND( 
PackageName__r.RecordType.DeveloperName =&quot;Group&quot;,
PackageType__c != &quot;Group&quot;
)
,
AND( 
PackageName__r.RecordType.DeveloperName =&quot;LicenseDirect&quot;,
PackageType__c != &quot;LicenseDirect&quot;
)
,
AND( 
PackageName__r.RecordType.DeveloperName =&quot;LicenseProvision&quot;,
PackageType__c != &quot;LicenseProvision&quot;
)
))</errorConditionFormula>
    <errorDisplayField>PackageType__c</errorDisplayField>
    <errorMessage>The invoice position Package Type Name does not match the Package Record Type Name. Please get in touch with your Super User.
(INP12)</errorMessage>
</ValidationRule>