force-app/main/default/objects/InvoicePos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>InvoiceName__c</columns>
    <columns>NAME</columns>
    <columns>FinanceAccount__c</columns>
    <columns>PackageType__c</columns>
    <columns>PackageSubType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>